--- a/FrontEnd/public/css/style.css
+++ b/FrontEnd/public/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Chakra+Petch&display=swap');
+:root{
+}
 .font-chakra{
     font-family: 'Chakra Petch', sans-serif;
 }
